--- a/src/static/less/main.less
+++ b/src/static/less/main.less
@@ -1,10 +1,11 @@
-.react-main{
-    width: 400px;
-    height: 400px;
-    margin: 0 auto;
-    background: aquamarine;
-    text-align: center
+.react-main {
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  background: aquamarine;
+  text-align: center;
 }
-.react-p{
-    color: blue;
+
+.react-p {
+  color: blue;
 }
